# razv-wavespeed

./: .gitignore  README.md  __init__.py  config.ini.tmp  pyproject.toml  requirements.txt
comfyui-razv-wavespeed-custom/py/: bytedance_seedream_v4.py  bytedance_seedream_v4_sequential.py  google_nano_banana_edit.py  wavespeed_client.py
py/: alibaba_wan25_image_edit.py  bytedance_seedream_v4.py  bytedance_seedream_v4_edit.py  bytedance_seedream_v4_edit_sequential.py  bytedance_seedream_v4_sequential.py  flux_controlnet_union_pro_2.py  flux_kontext_dev.py  flux_kontext_max.py  flux_kontext_pro.py  google_nano_banana_pro_edit.py  google_nano_banana_pro_edit_multi.py  google_nano_banana_pro_edit_ultra.py  google_nano_banana_pro_text_to_image.py  google_nano_banana_pro_text_to_image_multi.py  google_nano_banana_pro_text_to_image_ultra.py  google_nano_banana_text_to_image.py  google_veo31_fast_image_to_video.py  google_veo31_fast_text_to_video.py  google_veo31_image_to_video.py  google_veo31_reference_to_video.py  google_veo31_text_to_video.py  image_upscaler.py  infinitetalk.py  infinitetalk_multi.py  openai_sora2_image_to_video.py  openai_sora2_image_to_video_pro.py  openai_sora2_text_to_video.py  openai_sora2_text_to_video_pro.py  qwen_image_edit.py  qwen_image_edit_lora.py  qwen_image_edit_plus.py  qwen_image_edit_plus_lora.py  qwen_image_text_to_image.py  qwen_image_text_to_image_lora.py  runwayml_upscale_v1_node.py  wan_22_animate.py  wan_2_2_i2v_720p.py  wan_2_5_i2v.py  wan_2_5_image_to_video.py  wan_2_5_image_to_video_fast.py  (+5 more)
py/wavespeed_api/: client.py
(+84 files in other folders)
